// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component functionality should render correctly 1`] = `
<button
  className="button"
  style={
    Object {
      "backgroundColor": "Transparent",
      "border": "none",
      "float": "left",
      "outline": "none",
      "overflow": "hidden",
    }
  }
>
   
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-chevron-right fa-w-10 fa-2x "
    data-icon="chevron-right"
    data-prefix="fas"
    focusable="false"
    role="img"
    style={Object {}}
    viewBox="0 0 320 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z"
      fill="currentColor"
      style={Object {}}
    />
  </svg>
</button>
`;

exports[`Stars component functionality should render correctly 1`] = `
<div
  className="star"
  style={
    Object {
      "display": "inline",
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Test Carousel component functionality does not break with empty displayHouses array 1`] = `
<div
  className="carousel"
  style={
    Object {
      "height": "500px",
      "width": "1500px",
    }
  }
>
  <div
    className="buttonDiv"
    style={
      Object {
        "display": "flex",
        "float": "left",
        "height": "500px",
        "justifyContent": "center",
        "textAlign": "center",
        "width": "100px",
      }
    }
  >
    <Button
      buttonClickHandler={[Function]}
      value="right"
    />
  </div>
  <div
    className="houseDisplay"
  />
  <div
    className="buttonDiv"
    style={
      Object {
        "display": "flex",
        "float": "left",
        "height": "500px",
        "justifyContent": "center",
        "textAlign": "center",
        "width": "100px",
      }
    }
  >
    <Button
      buttonClickHandler={[Function]}
      value="left"
    />
  </div>
</div>
`;

exports[`Test Carousel component functionality returns null if no houses to map through 1`] = `
<div
  className="carousel"
  style={
    Object {
      "height": "500px",
      "width": "1500px",
    }
  }
>
  <div
    className="buttonDiv"
    style={
      Object {
        "display": "flex",
        "float": "left",
        "height": "500px",
        "justifyContent": "center",
        "textAlign": "center",
        "width": "100px",
      }
    }
  >
    <Button
      buttonClickHandler={[Function]}
      value="right"
    />
  </div>
  <div
    className="houseDisplay"
  />
  <div
    className="buttonDiv"
    style={
      Object {
        "display": "flex",
        "float": "left",
        "height": "500px",
        "justifyContent": "center",
        "textAlign": "center",
        "width": "100px",
      }
    }
  >
    <Button
      buttonClickHandler={[Function]}
      value="left"
    />
  </div>
</div>
`;

exports[`Test Carousel component functionality should render correctly 1`] = `
<div
  className="carousel"
  style={
    Object {
      "height": "500px",
      "width": "1500px",
    }
  }
>
  <div
    className="buttonDiv"
    style={
      Object {
        "display": "flex",
        "float": "left",
        "height": "500px",
        "justifyContent": "center",
        "textAlign": "center",
        "width": "100px",
      }
    }
  >
    <button
      className="button"
      onClick={[Function]}
      style={
        Object {
          "backgroundColor": "Transparent",
          "border": "none",
          "float": "left",
          "outline": "none",
          "overflow": "hidden",
        }
      }
      value="right"
    >
       
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-chevron-left fa-w-10 fa-2x "
        data-icon="chevron-left"
        data-prefix="fas"
        focusable="false"
        id="right"
        role="img"
        style={Object {}}
        viewBox="0 0 320 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </button>
  </div>
  <div
    className="houseDisplay"
  />
  <div
    className="buttonDiv"
    style={
      Object {
        "display": "flex",
        "float": "left",
        "height": "500px",
        "justifyContent": "center",
        "textAlign": "center",
        "width": "100px",
      }
    }
  >
    <button
      className="button"
      onClick={[Function]}
      style={
        Object {
          "backgroundColor": "Transparent",
          "border": "none",
          "float": "left",
          "outline": "none",
          "overflow": "hidden",
        }
      }
      value="left"
    >
       
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-chevron-right fa-w-10 fa-2x "
        data-icon="chevron-right"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 320 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Test House component functionality should render correctly 1`] = `
<div
  className="house"
  onClick={[Function]}
  style={
    Object {
      "float": "left",
      "margin": "20px 20px 20px 20px",
    }
  }
>
  <div
    className="image"
  >
    <img
      src="https://housemania.s3-us-west-1.amazonaws.com/annie-spratt-BmjlyHwV1S0-unsplash.jpg"
      style={
        Object {
          "height": "200px",
          "width": "250px",
        }
      }
    />
  </div>
  <div
    className="layout"
  >
    <h5>
      apartment
      : 
      Saratoga
    </h5>
  </div>
  <div
    className="description"
  >
    <h3>
      quaint house
    </h3>
  </div>
  <div
    className="cost"
  >
    <h5>
      $309/night
    </h5>
  </div>
  <div
    className="stars"
  >
    <h5>
      <div
        className="star"
        style={
          Object {
            "display": "inline",
            "whiteSpace": "nowrap",
          }
        }
      >
        <div
          style={
            Object {
              "display": "inline",
              "justifyContent": "center",
              "textAlign": "center",
              "whiteSpace": "nowrap",
            }
          }
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-star fa-w-18 "
            data-icon="star"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 576 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
        <div
          style={
            Object {
              "display": "inline",
              "justifyContent": "center",
              "textAlign": "center",
              "whiteSpace": "nowrap",
            }
          }
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-star fa-w-18 "
            data-icon="star"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 576 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
        <div
          style={
            Object {
              "display": "inline",
              "justifyContent": "center",
              "textAlign": "center",
              "whiteSpace": "nowrap",
            }
          }
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-star fa-w-18 "
            data-icon="star"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 576 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
        <div
          style={
            Object {
              "display": "inline",
              "justifyContent": "center",
              "textAlign": "center",
              "whiteSpace": "nowrap",
            }
          }
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-star fa-w-18 "
            data-icon="star"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 576 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
        <div
          style={
            Object {
              "display": "inline",
              "justifyContent": "center",
              "textAlign": "center",
              "whiteSpace": "nowrap",
            }
          }
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-star fa-w-18 "
            data-icon="star"
            data-prefix="far"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 576 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M528.1 171.5L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6zM388.6 312.3l23.7 138.4L288 385.4l-124.3 65.3 23.7-138.4-100.6-98 139-20.2 62.2-126 62.2 126 139 20.2-100.6 98z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
      </div>
       
      20
    </h5>
  </div>
</div>
`;

exports[`Test Widget component functionality should render correctly 1`] = `
<div
  id="morePlaces"
>
  <h2>
    More places to stay
  </h2>
  <Carousel
    changeCurrentHouse={[Function]}
    end={3}
    shiftDisplay={[Function]}
    start={0}
  />
</div>
`;
